[package]
name = "sweaty-heart"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Silvester <kevinsilvester05@gmail.com>"]
repository = "https://github.com/moviology/sweaty-heart"
homepage = "https://github.com/moviology/sweaty-heart"
license-file = "LICENSE"

[lib]
name = "sweaty_heart"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.66"
pyo3 = { version = "0.17.3", features = [
   "extension-module",
   "chrono",
   "anyhow",
] }
serialport = { version = "4.2.0", default_features = false, features = [] }
