[package]
name = "sweaty-heart"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Silvester <kevinsilvester05@gmail.com>"]
repository = "https://github.com/moviology/sweaty-heart"
homepage = "https://github.com/moviology/sweaty-heart"
license-file = "LICENSE"

[lib]
name = "sweaty_heart"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.66"
pyo3 = { version = "0.17.3", features = [
   "extension-module",
   "chrono",
   "anyhow",
] }
pyo3-asyncio = { version = "0.17.0", features = ["tokio-runtime"] }
serialport = { version = "4.2.0", default_features = false, features = [] }
async-std = "1.12.0"
tokio = "1.23.0"
retry = "2.0.0"
rayon = "1.6.1"
smoothed_z_score = "0.1.3"
